--- a/NerdeKalRaporService/NerdeKalRaporService.csproj
+++ b/NerdeKalRaporService/NerdeKalRaporService.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.0.0" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="7.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.20"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
